kube/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gestock
  labels:
    name: gestock
