kube/service.yaml
---
# Oracle Service
apiVersion: v1
kind: Service
metadata:
  name: oracle-db
spec:
  selector:
    app: oracle-db
  ports:
    - port: 1521
      targetPort: 1521

---
# Backend Service
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  type: NodePort
  selector:
    app: backend
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30300

---
# Frontend Service
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  type: NodePort
  selector:
    app: frontend
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30800
